--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --setupFiles dotenv/config",
     "build": "tsc",
     "prepublish": "tsc"
   },
   "author": "Jaume Serrats",
   "license": "ISC",
   "dependencies": {
-    "@types/node-schedule": "^2.1.7",
     "mqtt": "^5.7.0",
     "node-schedule": "^2.1.1",
     "sunrise-sunset-js": "^2.2.1",
-    "typescript": "^5.4.5",
     "wildcard-match": "^5.1.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@types/jest": "^29.5.12",
+    "@types/node-schedule": "^2.1.7",
+    "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
