--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A typescript wrapper for easily creating home automations with mqtt entities",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --setupFiles dotenv/config",
     "build": "tsc",
