--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jaume Serrats",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "mqtt": "^5.7.0",
     "sunrise-sunset-js": "^2.2.1",
     "wildcard-match": "^5.1.3"
