--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
+    "@biomejs/biome": "1.8.3",
     "@types/jest": "^29.5.12",
     "@types/node-schedule": "^2.1.7",
     "babel-jest": "^29.7.0",
