--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "mqtt-assistant",
-  "version": "0.9.4",
-  "description": "A typescript wrapper for easily creating home automations with mqtt entities",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "test": "jest --setupFiles dotenv/config",
-    "build": "tsc",
-    "prepublish": "tsc"
-  },
-  "author": "Jaume Serrats",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "mqtt": "^5.7.0",
-    "sunrise-sunset-js": "^2.2.1",
-    "wildcard-match": "^5.1.3"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.24.7",
-    "@biomejs/biome": "1.8.3",
-    "@types/jest": "^29.5.12",
-    "@types/node-schedule": "^2.1.7",
-    "babel-jest": "^29.7.0",
-    "dotenv": "^16.4.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  }
+	"name": "mqtt-assistant",
+	"version": "0.9.4",
+	"description": "A typescript wrapper for easily creating home automations with mqtt entities",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"scripts": {
+		"test": "jest --setupFiles dotenv/config",
+		"build": "tsc",
+		"prepublish": "tsc",
+		"lint": "npx @biomejs/biome check --write ./src"
+	},
+	"author": "Jaume Serrats",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.7.2",
+		"mqtt": "^5.7.0",
+		"sunrise-sunset-js": "^2.2.1",
+		"wildcard-match": "^5.1.3"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.24.7",
+		"@biomejs/biome": "1.8.3",
+		"@types/jest": "^29.5.12",
+		"@types/node-schedule": "^2.1.7",
+		"babel-jest": "^29.7.0",
+		"dotenv": "^16.4.5",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.1.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.5"
+	}
 }
